--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -309,6 +309,9 @@
     <ClCompile Include="..\..\Device\src\libs\HAL\stm32f4xx_it.cpp">
       <Filter>libs\HAL</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Hardware\CPU_IT.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
