--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -686,6 +686,9 @@
     <ClInclude Include="..\..\Device\src\Menu\HandlersKeys.h">
       <Filter>Menu</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Device\src\Menu\Pages\PageMeasures.h">
+      <Filter>Menu\Pages</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Device\src\libs\CMSIS\startup_stm32f437xx.s">
