--- a/sources/OSC-VS/Panel/PanelOSC.vcxproj
+++ b/sources/OSC-VS/Panel/PanelOSC.vcxproj
@@ -92,7 +92,7 @@
       <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F429xx;MSVC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4068;4514;4820;5045</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4514;4820;5045</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
