--- a/sources/OSC-Open-VS/OSC-Open.vcxproj
+++ b/sources/OSC-Open-VS/OSC-Open.vcxproj
@@ -89,7 +89,7 @@
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F746xx;MSVC;OPEN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F746xx;MSVC;OPEN;USE_HAL_TIM_REGISTER_CALLBACKS=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
       <DisableSpecificWarnings>4068;4514;4623;4626;4820;5027;5045</DisableSpecificWarnings>
@@ -183,6 +183,7 @@
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_tim_ex.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\common\libs\STM32Cube_F7\Drivers\CMSIS\Include\core_cm7.h" />
     <ClInclude Include="..\common\libs\STM32Cube_F7\Drivers\STM32F7xx_HAL_Driver\Inc\stm32f7xx_hal_ltdc.h" />
     <ClInclude Include="..\common\libs\STM32Cube_F7\Drivers\STM32F7xx_HAL_Driver\Inc\stm32f7xx_hal_ltdc_ex.h" />
     <ClInclude Include="..\OSC-Open\src\Hardware\CPU.h" />
