--- a/sources/OSC-Open/OSC-Open.uvprojx
+++ b/sources/OSC-Open/OSC-Open.uvprojx
@@ -7,7 +7,7 @@
 
   <Targets>
     <Target>
-      <TargetName>Panel</TargetName>
+      <TargetName>OSC-Open</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pArmCC>5060528::V5.06 update 5 (build 528)::ARMCC</pArmCC>
@@ -17,7 +17,7 @@
         <TargetCommonOption>
           <Device>STM32F746IGTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F7xx_DFP.2.9.0</PackID>
+          <PackID>Keil.STM32F7xx_DFP.2.10.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IRAM(0x20010000,0x40000) IRAM2(0x20000000,0x10000) IROM(0x08000000,0x100000) IROM2(0x00200000,0x100000) CPUTYPE("Cortex-M7") FPU3(SFPU) CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -379,7 +379,7 @@
       </TargetOption>
       <Groups>
         <Group>
-          <GroupName>libs/CMSIS</GroupName>
+          <GroupName>Panel/libs/CMSIS</GroupName>
           <Files>
             <File>
               <FileName>system_stm32f7xx.c</FileName>
@@ -394,7 +394,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>libs/HAL</GroupName>
+          <GroupName>Panel/libs/HAL</GroupName>
           <Files>
             <File>
               <FileName>stm32f7xx_hal_conf.h</FileName>
@@ -484,7 +484,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>src</GroupName>
+          <GroupName>Panel/src</GroupName>
           <Files>
             <File>
               <FileName>defines.h</FileName>
@@ -519,7 +519,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Display</GroupName>
+          <GroupName>Panel/Display</GroupName>
           <Files>
             <File>
               <FileName>Display.cpp</FileName>
@@ -574,7 +574,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Display/font</GroupName>
+          <GroupName>Panel/Display/font</GroupName>
           <Files>
             <File>
               <FileName>Font.h</FileName>
@@ -609,7 +609,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Hardware</GroupName>
+          <GroupName>Panel/Hardware</GroupName>
           <Files>
             <File>
               <FileName>FSMC.cpp</FileName>
@@ -664,7 +664,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Hardware/stm32</GroupName>
+          <GroupName>Panel/Hardware/stm32</GroupName>
           <Files>
             <File>
               <FileName>stm32.cpp</FileName>
@@ -699,7 +699,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Utils</GroupName>
+          <GroupName>Panel/Utils</GroupName>
           <Files>
             <File>
               <FileName>Decoder.cpp</FileName>
@@ -724,7 +724,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Settings</GroupName>
+          <GroupName>Panel/Settings</GroupName>
           <Files>
             <File>
               <FileName>SettingsTypes.h</FileName>
