Device Класс PainterMem для рисования в памяти

--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="..\..\Device\src\Display\Grid.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Painter.cpp" />
     <ClCompile Include="..\..\Device\src\Display\PainterData.cpp" />
+    <ClCompile Include="..\..\Device\src\Display\PainterMem.cpp" />
     <ClCompile Include="..\..\Device\src\Display\RShift.cpp" />
     <ClCompile Include="..\..\Device\src\FlashDrive\FileManager.cpp" />
     <ClCompile Include="..\..\Device\src\FlashDrive\FlashDrive.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="..\..\Device\src\Display\Grid.h" />
     <ClInclude Include="..\..\Device\src\Display\Painter.h" />
     <ClInclude Include="..\..\Device\src\Display\PainterData.h" />
+    <ClInclude Include="..\..\Device\src\Display\PainterMem.h" />
     <ClInclude Include="..\..\Device\src\Display\RShift.h" />
     <ClInclude Include="..\..\Device\src\Display\Symbols.h" />
     <ClInclude Include="..\..\Device\src\Display\TypeSymbols.h" />
