--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -1885,6 +1885,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Display\HiPart.h</FilePath>
             </File>
+            <File>
+              <FileName>PainterMem.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Display\PainterMem.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PainterMem.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\PainterMem.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
