--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -312,6 +312,9 @@
     <ClCompile Include="..\..\Device\src\Display\DisplayOsci.cpp">
       <Filter>Display</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Display\PainterMem.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -690,6 +693,9 @@
       <Filter>FPGA</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Display\DisplayOsci.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Display\PainterMem.h">
       <Filter>Display</Filter>
     </ClInclude>
   </ItemGroup>
