--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -43,6 +43,8 @@
     <ClCompile Include="..\..\Device\src\FPGA\FPGA.cpp" />
     <ClCompile Include="..\..\Device\src\FPGA\FPGAMath.cpp" />
     <ClCompile Include="..\..\Device\src\FPGA\RShift.cpp" />
+    <ClCompile Include="..\..\Device\src\FPGA\TrigLev.cpp" />
+    <ClCompile Include="..\..\Device\src\FPGA\TShift.cpp" />
     <ClCompile Include="..\..\Device\src\Globals.cpp" />
     <ClCompile Include="..\..\Device\src\Hardware\AT25160N.cpp" />
     <ClCompile Include="..\..\Device\src\Hardware\CPU.cpp" />
@@ -168,6 +170,8 @@
     <ClInclude Include="..\..\Device\src\FPGA\FPGAMath.h" />
     <ClInclude Include="..\..\Device\src\FPGA\FPGATypes.h" />
     <ClInclude Include="..\..\Device\src\FPGA\RShift.h" />
+    <ClInclude Include="..\..\Device\src\FPGA\TrigLev.h" />
+    <ClInclude Include="..\..\Device\src\FPGA\TShift.h" />
     <ClInclude Include="..\..\Device\src\Globals.h" />
     <ClInclude Include="..\..\Device\src\Hardware\AT25160N.h" />
     <ClInclude Include="..\..\Device\src\Hardware\CPU.h" />
